--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 --- #YAML:1.0
 name:               Net-IPAddress-Util
-version:            1.001
+version:            1.002
 abstract:           Version-agnostic representation of an IP address
 author:
     - Paul Bennett <paul.w.bennett@gmail.com>
@@ -13,6 +13,7 @@ build_requires:
 requires:
     Class::Std:    0.011
     Math::BigInt:  1.997
+    perl:          5.010000
     Regexp::IPv6:  0.03
     Test::More:    0
 no_index:
