--- a/META.yml
+++ b/META.yml
@@ -1,26 +1,27 @@
---- #YAML:1.0
-name:               Net-IPAddress-Util
-version:            1.002
-abstract:           Version-agnostic representation of an IP address
+---
+abstract: 'Version-agnostic representation of an IP address'
 author:
-    - Paul Bennett <paul.w.bennett@gmail.com>
-license:            perl
-distribution_type:  module
-configure_requires:
-    ExtUtils::MakeMaker:  0
+  - 'Paul Bennett <paul.w.bennett@gmail.com>'
 build_requires:
-    ExtUtils::MakeMaker:  0
-requires:
-    Class::Std:    0.011
-    Math::BigInt:  1.997
-    perl:          5.010000
-    Regexp::IPv6:  0.03
-    Test::More:    0
-no_index:
-    directory:
-        - t
-        - inc
-generated_by:       ExtUtils::MakeMaker version 6.57_05
+  ExtUtils::MakeMaker: 0
+configure_requires:
+  ExtUtils::MakeMaker: 0
+dynamic_config: 1
+generated_by: 'ExtUtils::MakeMaker version 6.66, CPAN::Meta::Converter version 2.120921'
+license: perl
 meta-spec:
-    url:      http://module-build.sourceforge.net/META-spec-v1.4.html
-    version:  1.4
+  url: http://module-build.sourceforge.net/META-spec-v1.4.html
+  version: 1.4
+name: Net-IPAddress-Util
+no_index:
+  directory:
+    - t
+    - inc
+requires:
+  Carp: 0
+  Exporter: 0
+  List::MoreUtils: 0
+  Test::More: 0
+  mop: 0
+  perl: 5.018000
+version: 2.000
