Import of PWBENNETT/Net-IPAddress-Util-2.001_TRIAL from CPAN.
gitpan-cpan-distribution: Net-IPAddress-Util
gitpan-cpan-version:      2.001_TRIAL
gitpan-cpan-path:         PWBENNETT/Net-IPAddress-Util-2.001_TRIAL.tar.gz
gitpan-cpan-author:       PWBENNETT
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -19,9 +19,10 @@ no_index:
     - inc
 requires:
   Carp: 0
+  Class::Std: 0
   Exporter: 0
   List::MoreUtils: 0
   Test::More: 0
   mop: 0
   perl: 5.018000
-version: 2.000_TRIAL
+version: 2.001_TRIAL
