--- a/META.yml
+++ b/META.yml
@@ -23,6 +23,7 @@ requires:
   Exporter: 0
   List::MoreUtils: 0
   Test::More: 0
+  Time::HiRes: 0
   mop: 0
   perl: 5.018000
-version: 2.001_TRIAL
+version: 2.002_TRIAL
