--- a/META.yml
+++ b/META.yml
@@ -24,6 +24,5 @@ requires:
   List::MoreUtils: 0
   Test::More: 0
   Time::HiRes: 0
-  mop: 0
-  perl: 5.016000
-version: 2.004_TRIAL
+  perl: 5.008008
+version: 1.500
