--- a/META.yml
+++ b/META.yml
@@ -3,25 +3,26 @@ abstract: 'Version-agnostic representation of an IP address'
 author:
   - 'Paul Bennett <paul.w.bennett@gmail.com>'
 build_requires:
-  ExtUtils::MakeMaker: 0
+  ExtUtils::MakeMaker: '0'
 configure_requires:
-  ExtUtils::MakeMaker: 0
+  ExtUtils::MakeMaker: '0'
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.66, CPAN::Meta::Converter version 2.120921'
+generated_by: 'ExtUtils::MakeMaker version 6.98, CPAN::Meta::Converter version 2.140640'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
-  version: 1.4
+  version: '1.4'
 name: Net-IPAddress-Util
 no_index:
   directory:
     - t
     - inc
 requires:
-  Carp: 0
-  Exporter: 0
-  List::MoreUtils: 0
-  Test::More: 0
-  Time::HiRes: 0
-  perl: 5.010000
-version: 3.001
+  Carp: '0'
+  Exporter: '0'
+  List::MoreUtils: '0'
+  Test::LectroTest: '0'
+  Test::More: '0'
+  Time::HiRes: '0'
+  perl: '5.012000'
+version: '3.002'
