--- a/META.yml
+++ b/META.yml
@@ -7,7 +7,7 @@ build_requires:
 configure_requires:
   ExtUtils::MakeMaker: '0'
 dynamic_config: 1
-generated_by: 'ExtUtils::MakeMaker version 6.98, CPAN::Meta::Converter version 2.140640'
+generated_by: 'ExtUtils::MakeMaker version 6.98, CPAN::Meta::Converter version 2.141520'
 license: perl
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -21,8 +21,8 @@ requires:
   Carp: '0'
   Exporter: '0'
   List::MoreUtils: '0'
-  Test::LectroTest: '0'
+  Math::BigInt: '0'
   Test::More: '0'
   Time::HiRes: '0'
   perl: '5.012000'
-version: '3.003'
+version: '3.010'
